# SmartHireX

./: .gitignore  APP_FLOW.md  ARCHITECTURE_AUDIT.md  BACKEND_STRUCTURE.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TECH_STACK.md  chainlit.md  dvc.yaml  main.py  package-lock.json  pyproject.toml
.chainlit/: config.toml
app/: app_methods.py
app/agents/: __init__.py  hiring_agents.py
app/autonomous/: __init__.py  agents.py  config.json  config.py  models.py  orchestrator.py  validation.py
app/engine/: engine.py  model.py
app/integrations/: __init__.py  brightdata_client.py
app/models/: __init__.py  hiring_models.py
app/orchestrator/: __init__.py  pipeline_orchestrator.py
backend/: __init__.py  job_store.py  schemas.py
data/: applicant_archetypes.json  demo_candidates.json  interviews.parquet
frontend/: index.html  package-lock.json  package.json
pipelines/: create_applicant_profiles.py  run_judge_tests.py  simulate_interviews.py  utils.py
public/: theme.json
reports/: 20a8a66b-9e7d-4bb9-9296-89146dfbba2c.json  329910fa-dd90-4ed9-9b13-d5ec6e732e9e.json  6da4d25d-909d-4f26-ac50-a1f2af8e91f0.json  7e42d9f8-dcd1-4f10-8121-dfea348f54bf.json  c6b2b91e-aac3-4eaf-b064-adb2b95bbcaa.json
scripts/: run_demo_pipeline.py
src/: judge.py  judge_testing.py  llm_response_cache.py  multillm.py  simulation.py
tests/: test_autonomous_pipeline.py  test_decision.py  test_demo_candidates_data.py  test_interview_engine.py  test_judge_testing.py  test_multi_decision.py  test_parser.py  test_report_builder.py  test_success_criteria.py
(+97 files in other folders)
