[project]
name = "smarthirex"
version = "0"
requires-python = "==3.12.*"
dependencies = [
  "fastapi==0.117.0",
  "httpx==0.28.1",
  "openai==2.8.1",
  "pydantic==2.11.9",
  "pytest==9.0.1",
  "python-dotenv==1.2.1",
  "reportlab==4.2.5",
  "uvicorn==0.36.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*pynvml package is deprecated.*:FutureWarning"
]
pythonpath = [
  "."
]
